# finetuned-rag-qwen3

./: .gitignore  README.md  law_rag.ipynb  link_huggingface.txt  pyproject.toml  requirements.txt  tuning.ipynb
