[project]
name = "finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.12.0",
    "asttokens>=3.0.1",
    "bitsandbytes==0.49.1",
    "chromadb==1.4.1",
    "comm>=0.2.3",
    "gradio>=6.17.3",
    "huggingface-hub==0.36.0",
    "instructor>=1.15.3",
    "ipywidgets>=8.1.8",
    "langchain==1.2.3",
    "langchain-community==0.4.1",
    "langchain-core==1.2.6",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "pymupdf>=1.27.2.3",
    "rank-bm25>=0.2.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers==4.57.3",
    "wandb>=0.27.2",
]
